--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Bhuvaneshwor Traders</title>
-	<link rel="stylesheet" type="text/css" href="Css/Style.css">
+	<link rel="stylesheet" type="text/css" href="/Css/Style.css">
 	<link rel="icon" type="image/png" href="image/favicon.ico"/>
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
     <link rel="stylesheet" href="owl/owl.carousel.min.css">
